--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ dist: xenial
 sudo: required
 language: c
 
-env:
-  global:
-    - CODECOV_TOKEN=d1d0158f-d58d-46d9-8019-fd7ade8f47d6
-
 before_install:
   - sudo add-apt-repository -y ppa:snaipewastaken/ppa
   - sudo apt-get update -q
@@ -16,4 +12,4 @@ script:
   - make test
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - make codecov
